syntax = "proto3";

message tile_flags {
	int32 num_tiles = 1;
	repeated bool tileFrameImportant = 2 [packed=true];
	repeated bool tile_solid = 3 [packed=true];
}
